--- a/style.css
+++ b/style.css
@@ -81,6 +81,36 @@ gap: 0.5rem;
     margin-top: 1.5rem;
 
 }
+
+/* شكل الزرار الجديد */
+.btn-talk {
+  font-size: 1.2rem;
+  padding: 1rem 2.5rem;
+  border: none;
+  outline: none;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  background-color: rgb(14, 14, 26);
+  color: rgb(234, 234, 234);
+  font-weight: 700;
+  transition: 0.6s;
+  box-shadow: 0px 0px 60px #1f4c65;
+  -webkit-box-reflect: below 10px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+}
+
+.btn-talk:active {
+  scale: 0.92;
+}
+
+.btn-talk:hover {
+  background: linear-gradient(270deg, rgba(2, 29, 78, 0.681) 0%, rgba(31, 215, 232, 0.873) 60%);
+  color: rgb(4, 4, 38);
+}
+
+
+
+
 .hireme{
     background-color: #00adb5;
     color: #eeeeee;
@@ -427,33 +457,6 @@ footer {
 
 
 
-/* From Uiverse.io by ShrinilDhorda */ 
-.btn {
-  font-size: 1.2rem;
-  padding: 1rem 2.5rem;
-  border: none;
-  outline: none;
-  border-radius: 0.4rem;
-  cursor: pointer;
-  text-transform: uppercase;
-  background-color: rgb(14, 14, 26);
-  color: rgb(234, 234, 234);
-  font-weight: 700;
-  transition: 0.6s;
-  box-shadow: 0px 0px 60px #1f4c65;
-  -webkit-box-reflect: below 10px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
-}
-
-.btn:active {
-  scale: 0.92;
-}
-
-.btn:hover {
-  background: rgb(2,29,78);
-  background: linear-gradient(270deg, rgba(2, 29, 78, 0.681) 0%, rgba(31, 215, 232, 0.873) 60%);
-  color: rgb(4, 4, 38);
-}
-
 
 
 
@@ -555,6 +558,15 @@ footer {
   }
 
 }
+
+
+
+
+
+
+
+
+
 
 
 
